syntax = "proto3";
package idl;

import "common.proto";

option go_package = "evildoer/protogen;protogen";
option java_multiple_files = true;

service EventSrv {
  rpc SearchEvent (SearchEventReq) returns (SearchEventResponse) {}
  rpc GetEvent (GetEventReq) returns (GetEventResponse) {}
  rpc CreateEvent (CreateEventReq) returns (Event) {}
}

message SearchEventReq {
  Page page = 1;
  message EventSearch {
    optional Search search_option = 1;
    optional string form_key = 5;
    optional string creator = 3;
  }
  EventSearch event_search = 3;
}

message GetEventReq {
  string uuid = 1;
}

message SearchEventResponse {
  DefaultResponse default_response = 1;
  int64 count = 2;
  repeated Event events = 3;
}

message GetEventResponse {
  DefaultResponse default_response = 1;
  Event event = 2;
}

message CreateEventReq {
  string form_key = 1;
  int32 form_version = 2;
  bytes input_data = 3;
}

message Event {
  string uuid = 1;
  string access_mode = 2;
  string form_key = 3;
  int32 form_version = 4;
  bytes input_data = 5;
  optional bytes cloudevents = 6;
  string creator = 7;
}